flux/apps/utilities/woodpecker-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: woodpecker-server
    namespace: woodpecker
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "woodpecker.internal.axiom.lucasfehres.nl"
    rules:
        - backendRefs:
              - name: woodpecker-server
                port: 80
